--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,97 @@
+# Base compose for all services required by TLRL. By default it's runs on the default network
+# named tlrl.
+---
 version: '3.7'
-# Main compose file that builds all of the "required" services for a base
-# image that works out of box for our project.
-#
-# Note: we don't explicitly specify networks here and will let the services
-# join the default network. This works fine when running locally for
-# development/test/staging, as we don't need to be on the same network. For
-# production, we use multiple compose files (see https://docs.docker.com/compose/extends/#multiple-compose-files)
-# to join the default network that was created by our upstream nginx reverse proxy.
-#
+networks:
+  default:
+    external: false
+    name: tlrl
+
 services:
-  # -----
-  # The database for our application
-  # -----
-  tlrl-db:
-    build: db
-    image: tlrl-db:latest
-    container_name: tlrl-db
+  solr:
+    image: solr:8.5.1
+    container_name: solr
+    restart: "no"
+    volumes:
+      - "./target/solr:/var/solr"
+    ports:
+      - "8983:8983"
+
+  zookeeper:
+    image: bitnami/zookeeper:3
+    container_name: zookeeper
+    ports:
+      - '2181:2181'
+    volumes:
+      - './target/zookeeper:/bitnami/zookeeper'
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: bitnami/kafka:2
+    container_name: kafka
+    volumes:
+      - './target/kafka:/bitnami/kafka'
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092,EXTERNAL://localhost:9093
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
+    ports:
+      - '9092:9092'
+      - '9093:9093'
+    depends_on:
+      - 'zookeeper'
+
+  postgres:
+    image: postgres:12.3-alpine
+    container_name: postgres
     restart: "no"
     environment:
-      - DB_NAME
-      - DB_ADMIN_NAME
-      - DB_USER_NAME
-      - DB_DATA_VOLUME
-      - DB_SERVER_PORT
-      - DB_USER_PASSWORD=${DB_USER_PASSWORD:?}
-      - POSTGRES_USER=${DB_ADMIN_NAME}
-      - POSTGRES_PASSWORD=${DB_ADMIN_PASSWORD:?}
-      # The PostgreSQL Docker image (https://hub.docker.com/_/postgres) always
-      # creates a `postgres` database regardless of our config. Let's just make
-      # it more explicit here, and note that we shouldn't change this value. In
-      # the initdb scripts, we lock this database down and basically don't use it.
-      - POSTGRES_DB=postgres
+      - DB_NAME=${DB_NAME:-tlrldb}
+      - DB_ADMIN=${DB_ADMIN:-tlrladmin}
+      - DB_USER=${DB_USER:-tlrluser}
+      - DB_ADMIN_PASSWORD=${DB_ADMIN_PASSWORD:-tlrladmin}
+      - DB_USER_PASSWORD=${DB_USER_PASSWORD:-tlrluser}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
     volumes:
-      - "${DB_DATA_VOLUME}:/var/lib/postgresql/data"
+      - "./backend/db/schema:/docker-entrypoint-initdb.d"
+      - "./target/postgres:/var/lib/postgresql/data"
     ports:
-      - "${DB_SERVER_PORT}:5432"
+      - "5432:5432"
 
-  # ----
-  # Our main api/web application. When running without the tlrl-db service
-  # it will rely on an embedded H2 database.
-  # ----
-  tlrl-app:
+  fetcher:
+    build:
+      context: ./fetcher
+    image: tlrl-fetcher
+    container_name: tlrl-fetcher
+    environment:
+      - FETCHER_LOG_LVL=${FETCHER_LOG_LVL:-4}
+      - FETCHER_KAFKA_BROKERS=${KAFKA_BROKERS:-kafka:9092}
+      - FETCHER_SOLR_SERVER=${SOLR_SERVER:-solr:8983}
+    volumes:
+      - "${FETCHER_HOST_ARCHIVE_DIR:-./target/fetcher/archive}:/data/fetcher"
+    depends_on:
+      - 'kafka'
+
+  app:
     build:
       context: .
       args:
-        - TARGET_DB=${TARGET_DB:-h2}
         - SKIP_TESTS=${SKIP_TESTS:-true}
-    image: tlrl-app:latest
+        - TARGET_DB=${TARGET_DB:-h2}
+        - SPRING_PROFILES=${SPRING_PROFILES:-dev}
+    image: tlrl-app
     container_name: tlrl-app
-    restart: "no"
     environment:
-      - ACTIVE_PROFILES
-      # Defaults to tlrl-db, as we are most likely running this with that service.
-      # And if we were running embedded H2, then it's fine, as with H2 we specify
-      # the file path, to write to, not host to connect to.
-      - DB_SERVER_HOSTNAME
+      - TARGET_DB=${TARGET_DB:-h2}
+      - SPRING_PROFILES=${SPRING_PROFILES:-dev}
+      - KAFKA_BROKERS=${KAFKA_BROKERS:-kafka:9092}
+      - SOLR_SERVER=${SOLR_SERVER:-solr:8983}
     ports:
-      - "${TLRL_SERVER_PORT}:8080"
+      - "8080:8080"
+    depends_on:
+      - 'kafka'
