--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     restart: "no"
     volumes:
       - "./target/solr:/var/solr"
+      - "./config/solr/tlrl/conf:/var/solr/data/tlrl/conf"
+      - "./config/solr/tlrl/core.properties:/var/solr/data/tlrl/core.properties"
+      - "./target/solr/data/tlrl/data:/var/solr/data/tlrl/data"
     ports:
       - "8983:8983"
 
@@ -73,7 +76,7 @@ services:
       - FETCHER_KAFKA_BROKERS=${KAFKA_BROKERS:-kafka:9092}
       - FETCHER_SOLR_SERVER=${SOLR_SERVER:-solr:8983}
     volumes:
-      - "${FETCHER_HOST_ARCHIVE_DIR:-./target/fetcher/archive}:/data/fetcher"
+      - "${FETCHER_HOST_ARCHIVE_DIR:-./target/fetcher/archive}:/data/fetcher/archive"
     depends_on:
       - 'kafka'
 
@@ -82,8 +85,8 @@ services:
     container_name: nginx
     restart: "no"
     volumes:
-      - "./nginx/nginx.conf:/etc/nginx/nginx.conf"
-      - "./target/fetcher/archive:/data/fetcher/archive"
+      - "./config/nginx/nginx.conf:/etc/nginx/nginx.conf"
+      - "${FETCHER_HOST_ARCHIVE_DIR:-./target/fetcher/archive}:/data/fetcher/archive"
     ports:
       - "9080:9080"
 
