Still needs a lot of cleaning up, but syncing up archive locations between nginx/fetcher

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,8 @@ services:
   fetcher:
     build:
       context: ./fetcher
+      args:
+        - FETCHER_ARCHIVE_DIR=${FETCHER_ARCHIVE_DIR:-/data/fetcher/archive}
     image: tlrl-fetcher
     container_name: tlrl-fetcher
     environment:
