--- a/fetcher/Dockerfile
+++ b/fetcher/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14-alpine
 
-ARG FETCHER_ARCHIVE_DIR=/data/fetcher
-ENV FETCHER_ARCHIVE_DIR=/data/fetcher
+ARG FETCHER_ARCHIVE_DIR
+ENV FETCHER_ARCHIVE_DIR=${FETCHER_ARCHIVE_DIR}
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 ENV CHROMIUM_PATH=/usr/bin/chromium-browser
 
