--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -64,6 +64,10 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-oauth2-jose</artifactId>
     </dependency>
+		<dependency>
+		  <groupId>org.apache.solr</groupId>
+		  <artifactId>solr-solrj</artifactId>
+		</dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
