Refactor to provide search/query results with facets as default instead of multiple trips to get facets

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,6 +24,11 @@ spring:
           github:
             client-id: 
             client-secret: 
+  jackson:
+    serialization:
+      WRITE_ENUMS_USING_TO_STRING: true
+    deserialization:
+      READ_ENUMS_USING_TO_STRING: true
 
 app:
   kafka:
