--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,14 +4,17 @@ spring:
   profiles:
     include:
       - local
+  # TODO: Remove, leave for further write-up
   # Profile pull from Maven profile property during the build process.
   # It's tied to a specific Maven profile that is responsible for loading
   # the target database dependencies.
   #- @database.profile@
+  jpa:
+    show-sql: false
   datasource:
     # Normally we want to connect as a database user, not admin
-    username: ${DB_USER_NAME:tlrluser}
-    password: ${DB_USER_PASSWORD:tlrluser}
+    username: ${TLRL_DB_USER:?}
+    password: ${TLRL_DB_USER_PASSWORD:?}
   thymeleaf:
     cache: false
   security:
@@ -33,17 +36,42 @@ spring:
 app:
   kafka:
     groupId: tlrl-app
-    bootstrap-servers: ${KAFKA_BROKERS:localhost:9093}
+    bootstrap-servers: ${TLRL_KAFKA_BROKERS:?}
   solr:
     baseUrls:
-      - http://${SOLR_SERVER:localhost:8983}/solr/tlrl
+      - http://${TLRL_SOLR_SERVER:?}/solr/tlrl
   events:
     bookmark:
       archived: bookmark.archived
       created: bookmark.created
       deleted: bookmark.deleted
-      indexed: bookmark.indexed
       updated: bookmark.updated
+
+logging:
+  level:
+    org:
+      springframework: ERROR
+      hibernate: ERROR
+    com.gnoht.tlrl: ERROR
+
+---
+#
+# Development specific profile
+# Note: if using postgres in development, you may want to use the an admin level 
+# user if we need to let hibernate auto-generate the ddl.
+spring:
+  profiles: dev
+  datasource:
+    continue-on-error: true
+  jpa:
+    show-sql: true
+
+app:
+  kafka:
+    bootstrap-servers: ${TLRL_KAFKA_BROKERS:localhost:9093}
+  solr:
+    baseUrls:
+      - http://${TLRL_SOLR_SERVER:localhost:8983}/solr/tlrl
 
 logging:
   level:
@@ -51,43 +79,6 @@ logging:
       springframework: INFO
       hibernate: ERROR
     com.gnoht.tlrl: DEBUG
-
----
-#
-# Development specific profile
-#
-spring:
-  profiles: dev
-  datasource:
-    # In development, we need to have hibernate auto-generate the DDL so
-    # we connect as an admin `tlrladmin`, giving us full control of the
-    # database.
-    username: ${DB_ADMIN_NAME:tlrladmin}
-    password: ${DB_ADMIN_PASSWORD:tlrladmin}
-    continue-on-error: true
-  jpa:
-    show-sql: true
-
----
-#
-# Production specific profile
-#
-spring:
-  profiles: prod
-  datasource:
-    # In production, the app only needs to read/write/delete from (e.g, schema usage),
-    # therefore will connect with `tlrluser`.
-    username: ${DB_USER_NAME:?}
-    password: ${DB_USER_PASSWORD:?}
-  jpa:
-    show-sql: false
-
-logging:
-  level:
-    org:
-      springframework: WARN
-      hibernate: ERROR
-    com.gnoht.tlrl: WARN
 ---
 #
 # Profile responsible for setting the H2 specific JDBC/JPA properties.
@@ -96,12 +87,12 @@ logging:
 spring:
   profiles: h2
   datasource:
-    url: jdbc:h2:file:./target/h2/${DB_NAME:tlrldb};MODE=PostgreSQL
+    url: jdbc:h2:file:./target/h2/${TLRL_DB_NAME:tlrldb};MODE=PostgreSQL
     driverClassName: org.h2.Driver
     platform: h2-dev
   jpa:
     hibernate:
-      'ddl-auto': ${DB_DDL_AUTO:update}
+      'ddl-auto': ${TLRL_DB_DDL_AUTO:update}
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
@@ -112,19 +103,17 @@ spring:
 
 ---
 #
-# Profile is responsible for setting the PostgreSQL specific JDBC/JPA
-# properties. It's possible to run this profile in any of the environments
-# (e.g, dev, test, production).
+# Profile responsible for setting our production PostgreSQL specific JDBC/JPA 
+# properties. 
 #
 spring:
   profiles: postgres
   datasource:
-    url: jdbc:postgresql://${DB_SERVER_HOSTNAME:localhost}:${DB_SERVER_PORT:5432}/${DB_NAME:tlrldb}
+    url: jdbc:postgresql://${TLRL_DB_SERVER_HOSTNAME}:${TLRL_DB_SERVER_PORT}/${TLRL_DB_NAME}
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate:
-      'ddl-auto': ${DB_DDL_AUTO:none}
+      'ddl-auto': ${TLRL_DB_DDL_AUTO:none}
       default_schema: public
     properties:
-      hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
