Clean up application properties, properly configure reverse proxy for development

--- a/config/nginx/nginx.development.conf
+++ b/config/nginx/nginx.development.conf
@@ -24,20 +24,5 @@ http {
   gzip on;
   gzip_types text/css image/jpg image/jpeg image/png image/svg;
 
-  server {
-    listen 9080 default_server;
-    listen [::]:9080 default_server;
-
-    server_name _;
-
-    location / {
-      proxy_pass http://host.docker.internal:8080/;
-    }
-
-    location /_archive {
-      internal;
-      alias /data/archive;
-    }
-  }
-
+  include /etc/nginx/conf.d/*.conf;
 }
